--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.3.0'
     kapt 'androidx.room:room-compiler:2.3.0'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 }
